--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <!--COMO HACER HERENCIA CON HANDLEBARS AIUDAAAAA-->
     <header class="ppal">
         <section class="menu">
             <img src="/img/logo.png" class="menu__logo">
@@ -45,11 +46,11 @@
         </section>
     </header>
 
-    <article class="carrito" >
-        <a class="carrito__items"></a>
+    <div class="carrito" onclick="location.href='/carrito'">
+        <a class="carrito__items">0</a>
         <br>
         <i class="fas fa-shopping-cart fa-2x carrito__items"></i>
-    </article>
+    </div>
 
     <section class="banner">
         <div class="banner__orange">
