--- a/public/styles/tienda.scss
+++ b/public/styles/tienda.scss
@@ -62,6 +62,7 @@ body{
 }
 
 .carrito{
+
     width: 10vh;
     height: 15vh;
     background: rgb(255, 142, 142);
@@ -73,6 +74,10 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
+    &:hover{
+        cursor: pointer;
+    }
     
     &__items{
         color: white;
