muestra productos mal, pero muestra

--- a/views/carrito.handlebars
+++ b/views/carrito.handlebars
@@ -44,11 +44,12 @@
         <div class="carrito__productos">
 
             <h3 class="carrito__titulo">Carrito de Compras</h3>
+            <div class="lista__carrito">
 
+            </div>
+            <!--concatenar esto al inner html del js-->
             <div class="producto__contenedor">
-
                 <div class="producto__img"></div>
-
                 <div class="producto__contenido">
                     <h3 class="producto__nombre">NOMBRE</h3>
                     <h3 class="producto__tipo">TIPO</h3>
@@ -59,7 +60,6 @@
                 </div>
                 <i class="far fa-times-circle fa-2x"></i>
             </div>
-
         </div>
 
         <div class="carrito__resumen">
@@ -129,7 +129,7 @@
     </footer>
 
 
-    <script src="/scripts/producto.js"></script>
+    <script src="/scripts/carrito.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </body>
