variables nuevas de id para js

--- a/views/carrito.handlebars
+++ b/views/carrito.handlebars
@@ -49,7 +49,7 @@
             </div>
             <!--concatenar esto al inner html del js-->
             <div class="producto__contenedor">
-                <div class="producto__img"></div>
+                <img class="producto__img" src="IMAGEN" alt="">
                 <div class="producto__contenido">
                     <h3 class="producto__nombre">NOMBRE</h3>
                     <h3 class="producto__tipo">TIPO</h3>
@@ -58,7 +58,10 @@
                         <input type="number" min="1" max="100" value="1" />
                     </div>
                 </div>
-                <i class="far fa-times-circle fa-2x"></i>
+
+                <div class="producto__x">
+                    <p class="producto__x-item"><i class="far fa-times-circle fa-2x "></i></p>
+                </div>
             </div>
         </div>
 
