--- a/public/styles/carrito.scss
+++ b/public/styles/carrito.scss
@@ -1,6 +1,7 @@
 $color-orange: #ee8d1f;
 $color-light-orange: #fff6ed;
 $color-blue: #00a7bd;
+$colorfont: rgb(31, 31, 31);
 
 body{
     margin: 0;
@@ -109,7 +110,6 @@ body{
     }
 }
 
-
 .producto{
     
     &__contenedor{
@@ -117,45 +117,57 @@ body{
         //border: solid 1px rgba(0, 0, 0, 0.2);
         padding: 1.5em;
         display: flex;
-        background: #00a7bd;
+        //background: #00a7bd;
     }
     
     &__img{
-        background: #ee8d1f;
-        width: 200px;
+        //background: #ee8d1f;
+        width: 400px;
         height: 200px;
         margin-right: 5%;
     }
     
     &__contenido{
-        width: 60%;
+        width: 50%;
         
-        background: #ee8d1f;
+        //background: #ee8d1f;
     }
     
     &__nombre{
         font-size: 20px;
         padding: 0.5em 0 0.5em 0;
-        color: rebeccapurple;
-        background: #00a7bd;
+        color: $colorfont;
+        //background: #00a7bd;
     }
     
     &__tipo{
         font-size: 12px;
         margin: 0;
         padding: 0.1em;
-        
-        color: pink;
-        background: #00a7bd;
+        color: $colorfont;
+        //background: #00a7bd;
     }
     
     &__precio{
         font-size: 15px;
         color: red;
-    }    
+    }  
+    
+    &__x{
+        width: 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        //background: pink;
+        
+        &-item{
+            width: 40px;
+            height: 40px;
+            color:rgba(0, 0, 0, 0.2);
+        }
+        
+    }
 }
-
-
 
 .pago-sin{
     width: 100%;
