--- a/public/styles/tienda.scss
+++ b/public/styles/tienda.scss
@@ -34,10 +34,10 @@ body{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background: rgba($color: black, $alpha: 0.3);
-        padding: 0.8em;
+        background: rgba(0, 0, 0, 0.3);
+        padding: 0.4em;
         position: absolute;
-        left: 210%;
+        left: 253%;
         top: 0%;
         
         &__icono {
@@ -47,18 +47,7 @@ body{
         &__texto {
             font-size: 15px;
         }
-    }
-    
-    &-sesion {
-        position: absolute;
-        left: 240%;
-        top: 15%; 
-        
-        &__texto {
-            font: black;
-        }
-    }
-    
+    }   
 }
 
 .carrito{
@@ -286,7 +275,7 @@ body{
     // }
     
     .dropbtn {
-        background-color: #3498DB;
+        //background-color: #3498DB;
         color: white;
         padding: 16px;
         font-size: 16px;
@@ -296,7 +285,7 @@ body{
     
     /* Dropdown button on hover & focus */
     .dropbtn:hover, .dropbtn:focus {
-        background-color: #2980B9;
+        //background-color: #2980B9;
     }
     
     /* The container <div> - needed to position the dropdown content */
@@ -309,7 +298,7 @@ body{
     .dropdown-content {
         display: none;
         position: absolute;
-        background-color: #f1f1f1;
+        //background-color: #f1f1f1;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
@@ -324,7 +313,9 @@ body{
     }
     
     /* Change color of dropdown links on hover */
-    .dropdown-content a:hover {background-color: #ddd}
+    .dropdown-content a:hover {
+        //background-color: #ddd
+    }
     
     /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
     .show {display:block;}
