--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -110,7 +110,8 @@
                     <img class="item__img" src="{{imagen}}">
                     <h3 class="item__nombre">{{nombre}}</h3>
                     <p class="item__precio">{{precio}}</p>
-                    <p class="item__c">{{categoria}}</p>
+                    <input type="hidden" class="item__c" value="{{categoria}}">
+                    <input type="hidden" class="item__t" value="{{tipo}}">
                 </a>
                 <button class="item__btn">Agregar al carrito</button>
             </li>
