--- a/public/styles/carrito.scss
+++ b/public/styles/carrito.scss
@@ -164,8 +164,14 @@ body{
             width: 40px;
             height: 40px;
             color:rgba(0, 0, 0, 0.2);
+            &:hover{
+                color:rgb(255, 78, 78);
+            }
         }
         
+        &:hover{
+            cursor: pointer;
+        }
     }
 }
 
