--- a/views/producto.handlebars
+++ b/views/producto.handlebars
@@ -29,6 +29,8 @@
                 <label class="producto-detallado__label">Precio</label>
                 <p class="producto-detallado__precio">{{precio}}</p>
                 <input type="hidden" class="item__id" value="{{_id}}">
+                <input type="hidden" class="item__c" value="{{categoria}}">
+                <input type="hidden" class="item__t" value="{{tipo}}">
             </div>
 
             <div class="acciones">
