--- a/public/styles/tienda.scss
+++ b/public/styles/tienda.scss
@@ -8,50 +8,8 @@ body{
     font-size: 16px;
 }
 
-.menu{
-    display: flex;
-    height: 68px;
-    flex-basis: 68px;
-    flex-grow: 0;
-    flex-shrink: 0;
-    align-items: center;
-    font-size: 17px;
-    font-weight: bold;
-    position: absolute;
-    // background: rgba(255, 255, 255, 0.8);
-    z-index: 10;
-    
-    &__logo{
-        width: 30%;
-        height: 60%;
-        margin: 0;
-        padding: .7em;
-        margin-left: 2em;      
-    }
-    
-    &-categoria {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: rgba(0, 0, 0, 0.3);
-        padding: 0.4em;
-        position: absolute;
-        left: 253%;
-        top: 0%;
-        
-        &__icono {
-            
-        }
-        
-        &__texto {
-            font-size: 15px;
-        }
-    }   
-}
-
 .carrito{
-
+    
     width: 10vh;
     height: 15vh;
     background: rgb(255, 142, 142);
@@ -142,30 +100,31 @@ body{
 
 .info{
     width: 100%;
-    height: 60vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: $color-light-orange;
     z-index: -1;
     position: relative;
     top: -300px;
+    background: $color-light-orange;
     
     &__title {
-        background: rebeccapurple;
+        // background: rebeccapurple;
         margin: 0;
         padding: 0.2em;
+        color: $color-orange;
         font-family: 'Homemade Apple', cursive;
-        color: white;
+        font-size: 30px;
     }
     
     &__desc{
-        background: #d78c2f;
+        width: 60%;
+        color: $color-orange;
         margin: 0;
         padding: 0.4em;
         text-align: center;
-        color: white;
     }     
 }
 
@@ -179,6 +138,7 @@ body{
         font-family: 'Homemade Apple', cursive;
         text-align: center;
         color: black;
+        font-size: 30px;
     }
 }
 
@@ -234,12 +194,17 @@ body{
         //background: #fff6ed;
         
         &-item{
-            width: 250px;
-            height: 250px;
+            width: 22%;
             margin: 10em;
             list-style-type: none;
-            border: solid #00a7bd;
+            border: solid 1px rgba(0, 0, 0, 0.2);
+            padding: 0.5em;
             margin: 0.4em;
+            
+            &:hover{
+                box-shadow: 8px 8px 10px 0px rgba(230,230,230,1);
+                cursor: pointer;
+        }
         }
     }
 }
@@ -254,68 +219,42 @@ body{
         text-align: center;
         font-size: 15px;
         padding: 0.2em;
-        background: #00a7bd;
+        //background: #00a7bd;
     }
     
     &__precio{
         text-align: center;
         font-size: 14px;
-        background: #d78c2f;
+        //background: #d78c2f;
     }
     
-    //Borrar esto luguito------
-    &__c{
-        font-size: 9px;
-    }
-}
-
-// &:hover{
-    //box-shadow: 8px 8px 10px 0px rgba(230,230,230,1);
-    // cursor: pointer;
-    // }
-    
-    .dropbtn {
-        //background-color: #3498DB;
-        color: white;
-        padding: 16px;
-        font-size: 16px;
-        border: none;
+    &__btn{
+        width: 100%;      
+        margin: 0;
+        margin-top: 1.5em;
+        padding: 0.5em;
+        border-radius: 12em;
+        text-align: center;
+        font-size: 13px;
+        font-weight: bold;
+        -webkit-transition-duration: 0.4s;
+        transition-duration: 0.4s;
         cursor: pointer;
     }
     
-    /* Dropdown button on hover & focus */
-    .dropbtn:hover, .dropbtn:focus {
-        //background-color: #2980B9;
+    &__btn1{
+        background-color: white; 
+        color: #d78c2f; 
+        border: 0.1em solid  #d78c2f;
+        
+        &:hover {
+            background-color:  #d78c2f;
+            color: white;
+        }
     }
     
-    /* The container <div> - needed to position the dropdown content */
-    .dropdown {
-        position: relative;
-        display: inline-block;
-    }
     
-    /* Dropdown Content (Hidden by Default) */
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        //background-color: #f1f1f1;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
-    }
-    
-    /* Links inside the dropdown */
-    .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-    }
-    
-    /* Change color of dropdown links on hover */
-    .dropdown-content a:hover {
-        //background-color: #ddd
-    }
-    
-    /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-    .show {display:block;}
+}
+
+
+
