Tienda casi acabada

--- a/public/styles/carrito.scss
+++ b/public/styles/carrito.scss
@@ -228,7 +228,7 @@ label{
         font-size: 10px;
         color: red;
     }
-
+    
     &-invisible {
         font-size: 10px;
         color: white;
@@ -316,3 +316,73 @@ label{
     }  
 }
 
+
+.acciones-cantidad{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // background: rebeccapurple;
+    //border: solid rgba(0, 0, 0, 0.2);
+    
+    &__btn{
+        text-align: center;
+        vertical-align: middle;
+        width: 35px;
+        height: 35px;
+        //padding: 0.4em;
+        background:  #d78c2f;
+        border: solid 1px  #d78c2f;
+        
+        &:hover{
+            background:  #b67627; 
+            border: solid 1px  #b67627;
+            cursor: pointer; 
+        }
+    }
+    
+    &__num{
+        width: 60px;
+        height: 35px;
+        //padding: 0.2em;
+        //background:red;
+        border: solid 1px  #d78c2f;
+        text-align: center;
+    }
+    
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-contenido {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .cerrar {
+    color: #aaa;
+    float: right;
+    font-size: 18px;
+    font-weight: bold;
+
+    &:hover, &:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
+  }
