--- a/views/producto.handlebars
+++ b/views/producto.handlebars
@@ -39,7 +39,7 @@
             <div class="acciones">
                 <div class="acciones__cantidad">
                     <p class="acciones__cantidad-nombre">Cantidad</p>
-                    <input class="acciones__cantidad-btn" type="number" min="1" max="100" value="1" />
+                    <input class="acciones__cantidad-btn" type="number" min="1" max="100" value="{{cantidad}}" />
                 </div>
                 <button class="acciones__btn acciones__btn1">Agregar</button>
             </div>
