--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -75,6 +75,8 @@
   display: none;
   position: absolute;
   background-color: #f1f1f1;
+  top: 82px;
+  left: 2px;
   min-width: 160px;
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
