--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -16,11 +16,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/styles/navbar.css">
     <link rel="stylesheet" href="/styles/tienda.css">
+    
     <title>Tienda ARTS | for artist lovers</title>
 </head>
 
 <body>
-    <!--COMO HACER HERENCIA CON HANDLEBARS AIUDAAAAA-->
+
     {{> navbar}}
 
     <div class="carrito" onclick="location.href='/carrito'">
@@ -41,6 +42,8 @@
                 <p class="banner__arts banner__arts-a">ARTS </p>
             </article>
 
+            <img class="banner__arts-logo" src="/img/logo.png" alt="">
+
             <div class="banner__blue">
                 <article>
                     <p class="banner__arts banner__arts-b ">ARTS </p>
@@ -50,7 +53,24 @@
                 </article>
 
                 <div class="banner__img">
+                    {{#if productoGeneral}}
+                    <input type="hidden" class="item__nombre" value="{{productoGeneral.nombre}}">
+                    <input type="hidden" class="item__precio" value="${{productoGeneral.precio}}">
+                    <input type="hidden" class="item__img" value="{{productoGeneral.imagen}}">
+                    <input type="hidden" class="item__id" value="{{productoGeneral._id}}">
+                    <input type="hidden" class="item__c" value="{{productoGeneral.categoria}}">
+                    <input type="hidden" class="item__t" value="{{productoGeneral.tipo}}">
+                    <img src="{{productoGeneral.imagen}}" alt="">
+                    {{else}}
+                    <input type="hidden" class="item__nombre" value="{{productoC.nombre}}">
+                    <input type="hidden" class="item__precio" value="${{productoC.precio}}">
+                    <input type="hidden" class="item__img" value="{{productoC.imagen}}">
+                    <input type="hidden" class="item__id" value="{{productoC._id}}">
+                    <input type="hidden" class="item__c" value="{{productoC.categoria}}">
+                    <input type="hidden" class="item__t" value="{{productoC.tipo}}">
                     <img src="{{productoC.imagen}}" alt="">
+                    {{/if}}
+                    <button class="item__btn item__btn2">Agregar al carrito</button>
                 </div>
             </div>
         </div>
@@ -83,7 +103,10 @@
                 {{/if}}
 
             </ul>
-                <input value="{{cantidad}}" class="input-rango" type="range" min="10000" max="30000">
+            <div>
+                <input value="{{precio}}" class="input-rango" type="range" min="10000" max="30000">
+                <output class="input-rango__salida">{{precio}}</output>
+            </div>
         </div>
     </section>
 
